--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,37 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    line-height: 1.6;
+    background-color: #000;
     background-image: url("./images/background.jpg");
     color: #fff;
+    visibility: hidden;
+  }
+
+  #loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    visibility: visible;
+  }
+  
+  #background-image {
+    background-image: url('./images/background.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+  }  
+
+#content {
+    visibility: visible;
 }
 
 header {
